NextGenAppPackage/main/default/objects/Plato_Ingrediente__c/Plato_Ingrediente__c.object-meta.xml
<CustomObject>
    <label>Plato Ingrediente</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Plato Ingrediente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plato Ingredientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>