NextGenAppPackage/main/default/objects/Plato_Ingrediente__c/fields/Ingrediente__c.field-meta.xml
<CustomField>
    <fullName>Ingrediente__c</fullName>
    <label>Ingrediente</label>
    <referenceTo>Ingrediente__c</referenceTo>
    <relationshipLabel>Plato Ingredientes</relationshipLabel>
    <relationshipName>Plato_Ingredientes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>