NextGenAppPackage/main/default/objects/Plato_Ingrediente__c/fields/N_mero__c.field-meta.xml
<CustomField>
    <fullName>N_mero__c</fullName>
    <inlineHelpText>Número de unidades</inlineHelpText>
    <label>Número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>