NextGenAppPackage/main/default/objects/Plato_Ingrediente__c/fields/Plato__c.field-meta.xml
<CustomField>
    <fullName>Plato__c</fullName>
    <label>Plato</label>
    <referenceTo>Plato__c</referenceTo>
    <relationshipLabel>Plato Ingredientes</relationshipLabel>
    <relationshipName>Plato_Ingredientes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>