NextGenAppPackage/main/default/objects/Plato_Ingrediente__c/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <label>Unidades</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>unidades</valueSetName>
    </valueSet>
</CustomField>